--- a/index.html
+++ b/index.html
@@ -1,18 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge" /> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="reset.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
     <link rel="stylesheet" href="style.css" />
-
-    <script
-      type="text/javascript"
-      src="https://app.termly.io/embed.min.js"
-      data-auto-block="on"
-      data-website-uuid="f8a495a7-04a9-4a02-a716-a04ab8b597bb"
-    ></script>
+    <script type="module" src="index.js"></script>
 
     <title>Biz Protector</title>
   </head>
@@ -218,38 +211,6 @@
       </div>
     </footer>
 
-    <script>
-      const hamb = document.querySelector('#hamb');
-      const popup = document.querySelector('#popup');
-      const body = document.body;
-
-      const menu = document.querySelector('#menu').cloneNode(1);
-
-      hamb.addEventListener('click', hambHandler);
-
-      function hambHandler(e) {
-        e.preventDefault();
-        popup.classList.toggle('open');
-        hamb.classList.toggle('active');
-        body.classList.toggle('noscroll');
-        renderPopup();
-      }
-
-      function renderPopup() {
-        popup.appendChild(menu);
-      }
-
-      const links = Array.from(menu.children);
-
-      links.forEach((link) => {
-        link.addEventListener('click', closeOnClick);
-      });
-
-      function closeOnClick() {
-        popup.classList.remove('open');
-        hamb.classList.remove('active');
-        body.classList.remove('noscroll');
-      }
-    </script>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
