change the name on the picture

--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
        
         <h2>Spolupracujeme s:</h2>
         <div class="partners">
-          <img src="img/FBI-VŠB.png" alt="FBI - VŠB" />
+          <img src="img/fbi.png" alt="FBI-VSB" />
           <img src="img/MSIC.jpeg" alt="MSIC" />
-          <img src="img/Startovárna.png" alt="Startovárna" />
-          <img src="img/VŠB-TUO.png" alt="VŠB-TUO" />
+          <img src="img/Startovarna.png" alt="Startovarna" />
+          <img src="img/vsb-tuo.png" alt="vsb-tuo" />
         </div>
 
          <div id="item5"></div>
