other form the picture

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <div class="partners">
           <img src="img/fbi.png" alt="FBI-VSB" />
           <img src="img/MSIC.jpeg" alt="MSIC" />
-          <img src="img/Startovarna.png" alt="Startovarna" />
+          <img src="img/Start.jpg" alt="Startovarna" />
           <img src="img/vsb-tuo.png" alt="vsb-tuo" />
         </div>
 
