content background and new css class

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <section> 
        <div id="item1"></div>
-      <div class="TopInfo"> 
+      <div class="top-info"> 
       
         <div class="container">
          
@@ -59,7 +59,6 @@
               </li>
             </ul>
           </div>
-          <a href="#item7">
             <!-- <form>
               <input type="submit" value="Chci vytvořit plán" />
               <input type="reset" value="Chci zjistit více" />
@@ -68,7 +67,7 @@
         </div>
       </div>
       <div class="container">
-        <div class="hlavniInfo">
+        <div class="hlavni-info">
           <div id="item2"></div>
           <h2>Co je to business continuity management?</h2>
           <p>
@@ -83,52 +82,59 @@
             působící na chod podnikání.
           </p>
         </div>
+      </div>
         <div id="item3"></div>
 
-        <h2>Co Vám nabízíme</h2>
-        <p class="textCooperation">
-          Naše spolupráce má několik základních fází od identifikace možných
-          rizik až po testování a údržbu plánu. Jsme ale schopni spolupracovat i
-          na jednotlivých fázích.
-        </p>
-        <div class="square">
-          <div class="text">
-            <h3>Analýza rizik</h3>
-            <p>
-              Provedeme násobnou analýzu rizik byznysových dopadů a
-              identifikujeme kritické části vašeho podnikání
+        <div class="cooperation">
+          <div class="container">
+
+            <h2>Co Vám nabízíme</h2>
+            <p class="cooperation-text">
+              Naše spolupráce má několik základních fází od identifikace možných
+              rizik až po testování a údržbu plánu. Jsme ale schopni spolupracovat i
+              na jednotlivých fázích.
             </p>
+            <div class="square">
+              <div class="square-text">
+                <h3>Analýza rizik</h3>
+                <p>
+                  Provedeme násobnou analýzu rizik byznysových dopadů a
+                  identifikujeme kritické části vašeho podnikání
+                </p>
+              </div>
+              <div class="square-text">
+                <h3>Business continuity plány</h3>
+                <p>
+                  Vytvoření jednotlivých řešení krizových scénářů na prioritní
+                  oblasti zjištěné z analýz rizik. Implementace do procesu.
+                </p>
+              </div>
+              <div class="square-text">
+                <h3>Workshopy</h3>
+                <p>Zábavné a interaktivní workshopy vytvořené Vám na míru</p>
+              </div>
+              <div class="square-text">
+                <h3>Správa, testování, školení</h3>
+                <p>
+                  Pravidelná kontrola aktuálnosti krizového řízení. Zaškolení všech
+                  zainteresovaných stran v procesu. Prověřování správné funkce a
+                  nastavení business continuity plánů.
+                </p>
+              </div>
+              <!-- <div class="text">
+                <h3>Provoz a testování</h3>
+                <p>V pravidelných intervalech prověříme aktuálnost plánů.</p>
+              </div> -->
+            </div>
           </div>
-          <div class="text">
-            <h3>Business continuity plány</h3>
-            <p>
-              Vytvoření jednotlivých řešení krizových scénářů na prioritní
-              oblasti zjištěné z analýz rizik. Implementace do procesu.
-            </p>
-          </div>
-          <div class="text">
-            <h3>Workshopy</h3>
-            <p>Zábavné a interaktivní workshopy vytvořené Vám na míru</p>
-          </div>
-          <div class="text">
-            <h3>Správa, testování, školení</h3>
-            <p>
-              Pravidelná kontrola aktuálnosti krizového řízení. Zaškolení všech
-              zainteresovaných stran v procesu. Prověřování správné funkce a
-              nastavení business continuity plánů.
-            </p>
-          </div>
-          <!-- <div class="text">
-            <h3>Provoz a testování</h3>
-            <p>V pravidelných intervalech prověříme aktuálnost plánů.</p>
-          </div> -->
-        </div>
+       </div>
         <!-- <div class="mapa">
           <form class="buttom">
             <input type="submit" value="Domluvit konzultaci" />
           </form>
         </div> -->
         <div id="item4"></div>
+      <div class="container">
 
         <h2>Kdo jsme?</h2>
 
