top-info cgange text margin

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="container">
          
           <h1>Pomáháme chránit kontinuitu vašeho podnikání!</h1>
-          <div class="info">
+          <div class="top-info_text">
             <ul>
               <li>- Analýzy rizik různými způsoby a detailně</li>
               <li>
